@@ -590,4 +590,4 @@ test parser {Parser} -match glob -body {
         }
     } res
     puts $res
-} -output {*syntax_error*}
+} -output {*suntax_error*}
